# everiapp-builder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  SECURITY.md  rebuild.bat  start.bat
aihub-agent/: README.md  pyproject.toml
aihub-agent/src/aihub_agent/: __main__.py  apps.py  auth.py  config.py  filestore.py  health.py  logs.py  ports.py  server.py  static_serve.py
aihub-agent/tests/: test_dispatch.py  test_filestore.py  test_ports.py
backend/: .env.example  .uvicorn-e2e.log.err  .uvicorn-live.err  .uvicorn-restart.log.err  pyproject.toml
backend/src/: audit_rotation.py  cli.py  config.py  database.py  database_tuning.py  llm_compat.py  main.py  middleware.py  node_env.py  python_env.py  rate_limit.py  version.py
backend/src/admin/: router.py  schemas.py  service.py
backend/src/ai/: code_parser.py  debug_log.py  probe_shared.py  prompts.py  router.py  runtime_probe_child.py  schemas.py  service.py  snapshots.py  verifier.py  wizard_prompts.py
backend/src/ai_prompts/: registry.py  router.py
backend/src/ai_providers/: purposes.py  router.py  schemas.py  service.py
backend/src/ai_toggle/: prompts.py  router.py  schemas.py  service.py
backend/src/analytics/: __init__.py  models.py  router.py  service.py
backend/src/app_db/: router.py  service.py
backend/src/apps/: models.py  provisioning.py  router.py  schemas.py  service.py
backend/src/audit_search/: __init__.py  router.py
backend/src/auth/: ad_client.py  cookies.py  dependencies.py  models.py  passwords.py  router.py  schemas.py  service.py
backend/src/auth/oidc/: __init__.py  client.py  router.py  (+1 more)
backend/src/backups/: __init__.py  router.py  service.py
backend/src/bug_reports/: analyzer.py  models.py  prompts.py  router.py  schemas.py  service.py
backend/src/connections/: app_calls.py  app_router.py  models.py  providers.py  router.py  schemas.py  service.py
backend/src/copilot/: __init__.py  router.py
backend/src/datasets/: cache.py  introspect.py  models.py  pii.py  router.py  runtime.py  schemas.py  service.py
backend/src/decisions/: __init__.py  models.py  router.py  service.py
backend/src/dependency_scan/: __init__.py  router.py  scanner.py
backend/src/deployments/: builder.py  models.py  router.py  schemas.py  service.py
backend/src/embedding/: __init__.py  router.py  service.py
backend/src/functions/: router.py  service.py
backend/src/generation_trace/: models.py  router.py  service.py
backend/src/licensing/: license.py  router.py
backend/src/llm_usage/: models.py  router.py  service.py
backend/src/marketplace/: external.py  models.py  router.py  schemas.py  screenshot_child.py  semver.py  service.py  suggest.py  suggest_prompts.py
backend/src/notifications/: __init__.py  router.py  service.py
backend/src/packaging/: router.py  service.py
backend/src/platform_settings/: models.py  router.py  service.py
backend/src/prompt_templates/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/publishing/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/python_packages/: models.py  router.py  service.py
backend/src/runtime/: manager.py  proxy.py  router.py  schemas.py
backend/src/secrets/: encryption.py  models.py  router.py  schemas.py  service.py
backend/src/security_scan/: __init__.py  router.py  scanner.py  service.py
backend/src/setup/: __init__.py  router.py
backend/src/siem/: __init__.py  forwarder.py  router.py
backend/src/system_status/: __init__.py  router.py
backend/src/teams/: __init__.py  models.py  router.py  service.py
backend/src/tracing/: __init__.py  context.py  models.py  router.py  service.py  writer.py
backend/src/versions/: router.py  schemas.py  service.py
backend/tests/: conftest.py  test_a11y_verify.py  test_ai_connections_http.py  test_ai_provider_purposes_http.py  test_analytics.py  test_app_db.py  test_app_db_http.py  test_audit_rotation.py  test_auto_rollback.py  test_backups.py  test_blue_green.py  test_bug_analyzer.py  test_cache_lineage_ratelimit.py  test_chat_rewind.py  test_cli.py  test_code_stream.py  test_connection_url.py  test_copilot_http.py  test_database_tuning.py  test_debug_log.py  test_decisions_http.py  test_dependency_scan.py  test_dev_skills.py  test_embedding.py  test_external_calls_http.py  test_generation_feedback.py  test_generation_prompt_contract.py  test_generation_trace.py  test_journey_wave2.py  test_ldap_admin_http.py  test_ldap_auth.py  test_licensing.py  test_llm_compat.py  test_local_auth_http.py  test_marketplace_external_http.py  test_node_env.py  test_notifications.py  test_observability.py  test_oidc.py  test_packaging_http.py  (+23 more)
backend/tests/test_ai/: test_editor_context.py  test_jump_directive.py  test_mid_stream_parser.py  test_rollback_http.py  test_runtime_probe.py  test_runtime_probe_gate.py  test_snapshots.py  test_verifier_parsing.py  test_wizard_parsing.py  test_wizard_save_validation.py
backend/tests/test_auth/: test_scoped_tokens_http.py
backend/tests/test_bug_reports/: test_analyzer_parser.py  test_risk_thresholding.py
backend/tests/test_data/: _helpers.py  test_bindings_http.py  test_cascade_http.py  test_connections_http.py  test_dataset_coerce.py  test_dataset_mutation.py  test_datasets_http.py  test_journey_full_platform.py  test_journey_new_features.py  test_models.py  test_mssql_http.py  test_prompt_block.py  test_recent_calls_http.py  test_runtime_http.py
backend/tests/test_deployments/: test_agent_deployer.py  test_audit_log.py  test_create_target_audit.py  test_create_target_http.py  test_meta_injection.py  test_port_allocation.py  test_secrets_and_providers_http.py
backend/tests/test_runtime/: test_runtime_progress.py  test_runtime_status_http.py  test_sdk_revendor_http.py
backend/tests/test_ui/: conftest.py  test_ui_01_smoke.py  test_ui_02_form_interactions.py  test_ui_03_journey_connection.py  test_ui_04_journey_dataset.py  test_ui_05_competency.py  test_ui_06_platform_tabs.py  test_ui_07_builder_data_flow.py
backend/tests/test_versions/: test_diff_http.py  test_publish_http.py
(+128 files in other folders)
