[project]
name = "aihub-agent"
version = "0.1.0"
description = "Deployment agent for the AIHub Platform — runs built apps on a target host with managed ports."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
aihub-agent = "aihub_agent.__main__:main"
aihub-agent-static = "aihub_agent.static_serve:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aihub_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
