[project]
name = "aihub-backend"
version = "0.1.0"
description = "AIHub Platform - AI-powered app development and deployment"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "litellm>=1.55.0",
    "pyjwt>=2.10.0",
    "cryptography>=44.0.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
    "asyncssh>=2.18.0",
    "playwright>=1.49.0",
    "click>=8.0",
    "pyyaml>=6.0",
    # --- SSO, bundled by default -------------------------------------------
    # Every advertised SSO method works with zero admin action — nobody
    # hand-installs auth libraries. OIDC needs nothing beyond pyjwt + httpx +
    # cryptography (already above). LDAP/AD uses pure-Python ldap3. SAML pulls
    # lxml + xmlsec (C extensions), but prebuilt wheels cover Windows, macOS,
    # and manylinux for cp312 — `pip install` needs no compiler or OS package
    # on those. Only exotic targets (musl/Alpine, a brand-new Python with no
    # published wheel yet) would fall back to building xmlsec and need the
    # system libxmlsec1-dev + pkg-config. The routes still degrade to a clean
    # 501 if python3-saml is ever stripped out (see auth/saml/service.py).
    "ldap3>=2.9.0",
    "python3-saml>=1.16.0",
]

[project.scripts]
aihub = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
# LDAP/AD and SAML are now in the base `dependencies` above (bundled by
# default). These extras are retained only as backward-compatible aliases so
# any existing `pip install -e .[ldap]` / `.[saml]` commands still resolve —
# they install nothing beyond what the base already pulls in.
ldap = [
    "ldap3>=2.9.0",
]
saml = [
    "python3-saml>=1.16.0",
]

# --- External DB drivers for platform Connections --------------------------
# Installed on demand by admins who need a given dialect. sqlite is bundled
# in the base deps (aiosqlite). The async wrappers below are what the
# connections.drivers.sql registry expects:
#   postgres → asyncpg
#   mysql    → aiomysql
#   mssql    → aioodbc (requires the system ODBC Driver 17 for SQL Server
#              or newer to also be installed at the OS level)
#   oracle   → oracledb (Oracle's pure-Python async driver, 1.x supports asyncio)
# Install with:  pip install -e .[postgres,mysql,mssql,oracle]
postgres = ["asyncpg>=0.29.0"]
mysql = ["aiomysql>=0.2.0"]
mssql = [
    "aioodbc>=0.5.0",
    "pyodbc>=5.0.0",
]
oracle = ["oracledb>=2.0.0"]
# Convenience meta-extra: every dialect at once.
all-dbs = [
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "aioodbc>=0.5.0",
    "pyodbc>=5.0.0",
    "oracledb>=2.0.0",
]

# --- Server-function curated libraries --------------------------------------
# What app server functions may import beyond the stdlib. This list is a
# CONTRACT mirrored in ai/prompts.py (the AI is taught exactly these names) —
# change both together. Dev checkouts install them into the platform venv
# (server functions run under sys.executable there); packaged installs ship
# them as <install>/python-libs for the vendored CPython instead (see
# python_env.py and the installer build).
server-fns = [
    "pandas>=2.2",
    "numpy>=2.0",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "pypdf>=5.1",
    "python-dateutil>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "journey: multi-step user-journey end-to-end tests against a real DB",
    "quality: production-readiness / robustness tests against a real DB",
    "slow: long-running test (30s+)",
]
